# one-updater

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.arm  README.md  build-arm.sh  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml
one_updater/: __init__.py  cli.py
one_updater/configs/: all_config.yaml  default_config.yaml
one_updater/package_managers/: __init__.py  apt.py  base.py  basher.py  brew.py  cargo.py  dnf.py  flatpak.py  gem.py  ghcli.py  go.py  krew.py  micro.py  npm.py  pacman.py  pip.py  pipx.py  pkgx.py  registry.py  snap.py  tldr.py  uv.py  vagrant.py
tests/: conftest.py  test_cli.py  test_config.yaml  test_export_import.py
