[project]
name = "one-updater"
version = "0.4.3"
description = "One tool many packages"
authors = [{ name = "Tim Bryant", email = "timothybryant3@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = ["click", "pyyaml", "rich", "python-semantic-release"]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
black = "^24.8.0"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
isort = "^5.13.2"
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "one_updater"]
filterwarnings = [
    "error",
    "ignore::RuntimeWarning",
    "ignore::DeprecationWarning",
]

[project.scripts]
one-updater = "one_updater.cli:cli"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "refactor",
    "fix",
    "perf",
    "style",
    "docs",
    "ci",
    "test",
    "feat",
    ":boom:",
    "BREAKING_CHANGE",
]
major_tags = [":boom:", "BREAKING_CHANGE"]
minor_tags = ["feat"]
patch_tags = [
    "fix",
    "perf",
    "style",
    "docs",
    "ci",
    "test",
    "refactor",
    "chore",
    "build",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_vcs_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
